<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppStore</string>
    <string name="home">Home</string>
    <string name="software">Software</string>
    <string name="game">Game</string>
    <string name="manager">Manager</string>
    <string name="download">Download</string>
    <string name="downloading">Continue</string>
    <string name="setting">Setting</string>
    <string name="update">Update</string>
    <string name="have_installed">Installed</string>
    <string name="open">Open</string>
    <string name="continues">Continue</string>
    <string name="pause">Pause</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author :&#160;</string>
    <string name="submit_comment">Submit comment</string>
    <string name="cancel">Cancel</string>
    <string name="comment_star">Score</string>
    <string name="comment_and_commentscore">Comment and score</string>
    <string name="whole">All</string>
    <string name="write_comment">Write comment</string>
    <string name="recomment">Recomment</string>
    <string name="popular">Popular</string>
    <string name="favour">Favour</string>
    <string name="fold">Fold</string>
    <string name="launch">Launch</string>
    <string name="updates">Update(%1$d)</string>
    <string name="downloads">Download(%1$d)</string>
    <string name="updateAll">Update all application</string>
    <string name="startAll">Start all tasks</string>

    <string name="manager_fragment_toast">Not do</string>
    <string name="toast_search">Please input srarch content</string>
    <string name="exit_app">Are you sure to exit?</string>
    <string name="install">Install</string>

    <string name="news">News</string>
    <string name="promulgator">Promulgator :&#160;</string>
    <string name="type">Type :&#160;</string>
    <string name="size">Size :&#160;</string>
    <string name="name">Name</string>
    <string name="more">More</string>
    <string name="touch_star">Touch score</string>
    <string name="write_your_commeent">Write your comment</string>
    <string name="comments">hfskla</string>
    <string name="content">Content</string>
    <string name="version">v3.0gengxin</string>

    <string name="news_content">gdgdsgsdgdfgdfsgsdfgfdshfghfghfkdjfalkfjsdlafjklasjaafsd</string>
    <string name="other_information">Other information</string>
    <string name="touch_look">Touch look</string>
    <string name="uninstall">Uninstall</string>
    <string name="remove">Remove</string>
    <string name="stopAll">Stop all tasks</string>
    <string name="no_task">No task</string>
    <string name="parsing_package_meet_peoblem">Parsing package meet problem</string>
    <string name="no_space_avilable">No space aviable</string>
    <string name="remove_file_error">Remove file error</string>
    <string name="finished">Download finish</string>
    <string name="start_download">Start download</string>
    <string name="not_need_update">Not need update</string>
    <string name="no_data_need_update">No data need update</string>
    <string name="check_net_state">Please check net state</string>
    <string name="frequent_used">Frequent used</string>
    <string name="search">Search</string>
    <string name="comment_content">Very good</string>
    <string name="who">Li Xiaohua</string>
    <string name="this_task_have_been_download">This task has been downloaded</string>
    <string name="network_is_available">Network is available</string>
    <string name="file_not_found">File not found</string>
    <string name="connect_timeout">Connect timeout</string>
    <string name="updating">Updating</string>
    <string name="dialog_warning">Warning!</string>
    <string name="dialog_warning_uninstall">For this installation file and the installed application, for some reason, the installed application needs to be uninstalled and reinstalled first, and will it continue?</string>
    <string name="success_to_install">&#160;is success to install!</string>
    <string name="failed_to_install">&#160;is failed to install!</string>

</resources>
