<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="com.openthos.appstore.fragment.item.CommentFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/fragment_commet_commenttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_and_commentscore"
            android:textSize="@dimen/second_title_size"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/fragment_comment_whole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whole"
            android:drawableRight="@mipmap/more"
            android:textSize="@dimen/second_title_size"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <com.openthos.appstore.view.CustomListView
        android:id="@+id/fragment_comment_listview"
        android:layout_width="match_parent"
        android:divider="@null"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >

            <Button
                android:id="@+id/fragment_comment_submit"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:text="@string/write_comment"
                android:textSize="@dimen/three_title_size"
                android:textColor="@color/button_cyan"
                android:background="@drawable/shape_button_white_cyan"
                />

            <Button
                android:id="@+id/fragment_comment_cancel"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/cancel"
                android:textSize="@dimen/three_title_size"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/fragment_comment_submit"
                android:visibility="gone"
                android:textColor="@color/button_gray"
                android:background="@drawable/shape_button_white_gray"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/fragment_comment_commentlayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@mipmap/edit_input"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginBottom="50dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_linearlayout"
                android:orientation="horizontal"
                android:background="@color/qianhuise"
                >
                <TextView
                    android:id="@+id/fragment_comment_score"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/comment_star"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/three_title_size"
                    android:paddingLeft="10dp"
                    />

                <RatingBar
                    android:layout_marginLeft="10dp"
                    android:id="@+id/fragment_comment_ratingbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:rating="0"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    />

                <TextView
                    android:paddingLeft="10dp"
                    android:id="@+id/fragment_comment_touchcomment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/touch_star"
                    android:textSize="@dimen/three_title_size"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>


            <EditText
                android:id="@+id/fragment_comment_content"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/write_your_commeent"
                android:background="@null"
                android:gravity="top"
                android:textSize="@dimen/content_size"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
