<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main_background"
              android:orientation="vertical"
    >

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/manager_height"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/update"
            style="@style/Main_Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:paddingLeft="@dimen/spacing_thirty"
            android:paddingRight="@dimen/spacing_thirty"
            android:text="@string/update"
            />

        <RadioButton
            android:id="@+id/download"
            style="@style/Main_Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/spacing_thirty"
            android:paddingRight="@dimen/spacing_thirty"
            android:text="@string/download"
            />

        <RadioButton
            android:id="@+id/have_installed"
            style="@style/Main_Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/spacing_thirty"
            android:paddingRight="@dimen/spacing_thirty"
            android:text="@string/have_installed"
            />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/manager_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/spacing_thirty"
        android:paddingRight="@dimen/spacing_thirty"
        />

</LinearLayout>
