<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/app_layout_gridview_layout"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/white"
    android:descendantFocusability="blocksDescendants"
    >

    <ImageView
        android:id="@+id/app_layout_gridview_icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_vertical"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/app_layout_gridview_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/app_layout_gridview_type"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/type"
            android:gravity="center_vertical"
            />

        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="30dp">
            <Button
                android:id="@+id/app_layout_gridview_install"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/install"
                android:background="@null"
                android:layout_marginBottom="5dp"
                android:layout_gravity="left"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
            <ProgressBar
                android:id="@+id/app_layout_gridview_progressbar"
                android:max="100"
                android:progress="0"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
