<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/item_manager_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_manager_appIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/item_manager_appName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/content"
            android:textColor="@color/text_black"
            android:textSize="@dimen/second_title_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_manager_appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/version"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/three_title_size" />

            <TextView
                android:id="@+id/item_manager_appcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/three_title_size" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/item_manager_apptask"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/update"
        android:textSize="@dimen/small_text_size" />
</LinearLayout>
