<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/fragment_detail_icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher"/>
                    <Button
                        android:id="@+id/fragment_detail_download"
                        android:layout_width="100dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="12dp"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_button_white_cyan"
                        android:text="@string/download"
                        android:textSize="@dimen/first_title_size"
                        android:textColor="@color/button_cyan"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="24dp"
                    >

                    <TextView
                        android:id="@+id/fragment_detail_appName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/news"
                        android:gravity="center_vertical"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/big_text_size"
                        />

                    <TextView
                        android:id="@+id/fragment_detail_appCompany"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/news"
                        android:textColor="@color/item_type"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/three_title_size"
                        android:layout_marginTop="8dp"
                        />

                    <RatingBar
                        android:id="@+id/fragment_detail_commentstar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="0.5"
                        android:scaleY="0.5"
                        android:gravity="left"
                        android:layout_gravity="left"
                        />

                    <TextView
                        android:id="@+id/fragment_detail_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/news_content"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/second_title_size"
                        android:lineSpacingExtra="8dp"
                        android:maxLines="2"
                        />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#eeeeee"/>

            <com.openthos.appstore.view.Kanner
                android:id="@+id/fragment_detail_kanner"
                android:layout_width="match_parent"
                android:layout_height="290dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#eeeeee"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:layout_marginRight="5dp"
                    >
                    <FrameLayout
                        android:id="@+id/fragment_detail_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:id="@+id/fragment_detail_otherinfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/other_information"
                            android:textSize="@dimen/first_title_size"
                            android:textColor="@color/item_title"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginRight="15dp"
                            android:background="@color/gray"/>

                        <TextView
                            android:id="@+id/fragment_detail_promulgator"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/promulgator"
                            android:textSize="@dimen/second_title_size"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/item_title"
                            />

                        <TextView
                            android:id="@+id/fragment_detail_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/type"
                            android:textSize="@dimen/second_title_size"
                            android:textColor="@color/item_title"
                            />
                        <TextView
                            android:id="@+id/fragment_detail_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/size"
                            android:textSize="@dimen/second_title_size"
                            android:textColor="@color/item_title"
                            />
                    </LinearLayout>
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fragment_detail_morelove"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>