<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/titile_height"
              android:background="@color/activity_title"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/activity_title_back"
                android:layout_width="@dimen/title_img_size"
                android:layout_height="@dimen/title_img_size"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@mipmap/back"
                />

            <ImageView
                android:id="@+id/activity_title_forward"
                android:layout_width="@dimen/title_img_size"
                android:layout_height="@dimen/title_img_size"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@mipmap/back"
                android:visibility="gone"
                />
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RadioButton
                android:id="@+id/rb_home"
                style="@style/Main_Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/home"
                />

            <RadioButton
                android:id="@+id/rb_software"
                style="@style/Main_Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/software"
                />

            <RadioButton
                android:id="@+id/rb_game"
                style="@style/Main_Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/game"
                />

            <RadioButton
                android:id="@+id/rb_manager"
                style="@style/Main_Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/manager"
                />

        </RadioGroup>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            >

            <RelativeLayout
                android:id="@+id/searchbox"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape_button_title_gray"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/activity_title_search_text"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:paddingRight="20dp"
                    android:singleLine="true"
                    android:textColor="@color/white"/>

                <ImageView
                    android:id="@+id/activity_title_search"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@mipmap/ic_menu_search"
                    />
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
